<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">抽样检测</string>
    <string name="huanyingyu">欢迎使用本平台</string>
    <string name="zhanghao">账号</string>
    <string name="mima">密码</string>
    <string name="remember_mima">记住密码</string>
    <string name="btn_denglu">登录</string>
    <string name="upload_data">上传数据</string>
    <string name="upload_img">上传图片</string>
    <string name="makeRpt1">生成报告</string>
    <string name="makeRpt2">生成报告(本地无签名)</string>
    <string name="btn_tongbu_emp">同步登录信息</string>
    <string name="btn_tongbu_apply">同步抽样信息</string>
    <string name="version_update">检查新版本</string>
    <string name="source_update">更新任务来源</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="xinzeng">新增</string>
    <string name="info_base">抽样基础信息</string>
    <string name="info_producer">(标称)生产者信息</string>
    <string name="info_unit">抽样单位信息</string>
    <string name="info_place">抽样场所信息</string>
    <string name="info_sample">抽样样品信息</string>
    <string name="queding">确定</string>
    <string name="details">详细情况</string>
    <string name="update">修改</string>
    <string name="getSignModel">获取签名模板</string>
    <string name="oldNumber">已有抽样单编号</string>
    <string name="applyNumber">申请抽样单编号</string>
    <string name="result">审核结果</string>
    <string name="no_result">没有审核结果</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="user_name">%1$s抽检员</string>
    <string name="unit_name">宁波市食品检验检测研究院</string>
    <string name="about">关于</string>
    <string name="settings">设置</string>
    <string name="changeaccount">切换账号</string>
    <string name="share">分享</string>
    <string name="feedback">反馈</string>
    <string name="more">更多</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="update_title">检测到新版本V%1$s</string>
    <string name="update_content">更新内容</string>
    <string name="update_btn">马上升级</string>
    <string name="app_version">抽样检测 V%1$s</string>
    <string name="nodata">无任何数据</string>
    <string name="getmoredata">加载更多数据</string>

</resources>
